<resources>
    <string name="app_name">personas</string>
    <string name="title">Agregar</string>
    <string name="crear">Crear Personas</string>
    <string name="listar">Listar Personas</string>
    <string name="cc">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="numero">No</string>
    <array name="Opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </array>
    <string name="done">Persona Guardada Exitosamente</string>
</resources>
